Fri Aug 16 07:41:07 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/tds/convert.c:
	- add conversion from int to bit
	- add conversion from int to money
	- add conversion from money to bit

Fri Aug 16 07:05:32 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/dblib/dblib.c: fix small buffer overflow
	+ src/ctlib/unittests/t0003.c:
	- initialize string value (needed by following strcat)

Sun Aug 11 12:36:40 EDT 2002	Brian Bruns <camber@ais.org>
	+ include/tds.h.in: add include config.h

Thu Aug  8 22:02:01 EDT 2002	Brian Bruns <camber@ais.org>
	+ src/ctlib/cs.c: set context parent
	+ src/ctlib/ctutil.c: call context handler if conn not set
	+ src/dblib/dblib.c: set context parent
	+ src/odbc/odbc.c: set context parent
	+ src/tds/util.c: context parent convience functions	
	+ configure.in: add checks for various 64bit int types
	+ acconfig.h: add HAVE_INT64
	+ include/tds.h.in: make TDS_INT8 a substituted value
	+ src/apps/tsql.c: fix call to tds_convert

Thu Aug  8 00:13:30 EDT 2002	JK Lowden <jklowden@schemamania.org>
	+ include/tds.h.in	tdsmoney now a union of TDS_INT8 and TDS_OLD_MONEY
	+ src/tds/convert.c	reinstituted numeric-based money handling.  
	* src/odbc/Makefile.am	Remove glib library dependency from ODBC

Tue Aug  6 00:16:34 EDT 2002	JK Lowden <jklowden@schemamania.org>
	+ include/tds.h.in	cosmetic changes
	+ include/sybdb.h 	changed DBDEAD to dbdead; provided macro.  Aids binary compatibility.
	+ src/dblib/dblib.c	dbconvert returns 0 if tds_convert returns 0
	+ src/tds/convert.c	char->bit disallows <0
				char->int allows embedded spaces
				hex->int is more efficient

Tue Jul 16 01:16:29 EDT 2002	JK Lowden <jklowden@schemamania.org>
	+ src/tds/tds_willconvert.h added, to support dbwillconvert
	+ src/tds/convert.c slightly modified to insert comments in tds_willconvert.h
	+ src/ctlib/ctutil.c, rename call to tds_reset_msg to tds_reset_msg_info

Mon Jul 15 03:29:58 EDT 2002	Brian Bruns <camber@ais.org>