@@ -1,3 +1,11 @@
+Fri Aug 16 07:51:38 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
+	+ src/tds/convert.c:
+	- add VARCHAR to convert table
+	- removed some unused variable and declaration
+	- return correct value converting from binary to char
+	- do not treat NVARCHAR like VARCHAR
+	- added some memory allocation tests
+
 Fri Aug 16 07:41:07 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
 	+ src/tds/convert.c:
 	- add conversion from int to bit
